# gnuv2_demangle

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  g2dem-web-14241323c5b4c8f1.js  g2dem-web-14241323c5b4c8f1_bg.wasm  g2dem-web-372f12ac7ee480ac_bg.wasm  g2dem-web-3adc6531ae261b00.js  g2dem-web-3adc6531ae261b00_bg.wasm  g2dem-web-41df7cfb6900d285.js  g2dem-web-41df7cfb6900d285_bg.wasm  g2dem-web-4bbafcd9e6f34af7.js  g2dem-web-4bbafcd9e6f34af7_bg.wasm  g2dem-web-5a2ac21a43c89866.js  g2dem-web-5a2ac21a43c89866_bg.wasm  g2dem-web-6086e525750ab19b_bg.wasm  g2dem-web-615cd4d6b8e23e10.js  g2dem-web-615cd4d6b8e23e10_bg.wasm  g2dem-web-74b2d0a0156b794e_bg.wasm  g2dem-web-7a0b9c284ec1d782_bg.wasm  g2dem-web-84a11ecb3b45224e.js  g2dem-web-84a11ecb3b45224e_bg.wasm  g2dem-web-93dcb57acafed9b8.js  g2dem-web-93dcb57acafed9b8_bg.wasm  g2dem-web-b3e54da3cf2954e6.js  g2dem-web-b3e54da3cf2954e6_bg.wasm  g2dem-web-c770a1160608c60d.js  g2dem-web-c770a1160608c60d_bg.wasm  g2dem-web-c84114ef0714fa55.js  g2dem-web-c84114ef0714fa55_bg.wasm  g2dem-web-c9c17d5f665e3aba_bg.wasm  g2dem-web-e228c0aa8507c7d.js  g2dem-web-e228c0aa8507c7d_bg.wasm  g2dem-web-e6ab20450b68d368.js  g2dem-web-e6ab20450b68d368_bg.wasm  g2dem-web-f672dd814471134f.js  g2dem-web-f672dd814471134f_bg.wasm  index.html  themes-f9a7815fe85ca4a.css
.github/ISSUE_TEMPLATE/: demangling_improvement.yml  demangling_issue.yml
.github/workflows/: build_and_publish_crate.yml  deploy_website.yml  md_lint.yml
src/g2dem/: Cargo.toml  README.md  build.rs
src/g2dem-web/: Cargo.toml  README.md  index.html  styles.css
src/g2dem-web/.cargo/: config.toml
src/g2dem-web/src/: main.rs  persistent_state.rs
src/g2dem-web/src/settings/: demangling_style.rs  mod.rs  theme.rs
src/g2dem-web/static/: styles.css  themes.css  tooltip.css
src/g2dem/src/: bin.rs
src/gnuv2_demangle/: Cargo.toml  README.md
src/gnuv2_demangle/src/: dem.rs  dem_arg.rs  dem_arg_list.rs  dem_namespace.rs  dem_template.rs  demangle_config.rs  demangle_error.rs  demangler.rs  lib.rs  option_display.rs  remainer.rs  str_cutter.rs
src/gnuv2_demangle/tests/: snapshots.rs  test.rs
src/gnuv2_demangle/tests/mangled_lists/: ff2.txt  hit_and_run.txt  most_wanted.txt  parappa2.txt  ty_july_first.txt
src/gnuv2_demangle/tests/snapshots/: snapshots__mangled_list_hit_and_run_cfilt.snap  snapshots__snapshot_mangled_list_ff2_cfilt.snap  snapshots__snapshot_mangled_list_ff2_improved.snap  snapshots__snapshot_mangled_list_hit_and_run_cfilt.snap  snapshots__snapshot_mangled_list_hit_and_run_improved.snap  snapshots__snapshot_mangled_list_parappa2_cfilt.snap  snapshots__snapshot_mangled_list_parappa2_improved.snap  snapshots__snapshot_mangled_list_ty_july_first_cfilt.snap  snapshots__snapshot_mangled_list_ty_july_first_improved.snap
