# SPDX-FileCopyrightText: © 2025 Decompollaborate
# SPDX-License-Identifier: MIT

[workspace]
members = [
    "src/gnuv2_demangle",
    "src/g2dem",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
    "Anghelo Carvajal <angheloalf95@gmail.com>",
]
repository = "https://github.com/Decompollaborate/gnuv2_demangle"
license = "MIT OR Apache-2.0"
