# SPDX-FileCopyrightText: © 2025 Decompollaborate
# SPDX-License-Identifier: MIT

[workspace]
members = [
    "src/gnuv2_demangle",
    "src/g2dem",
]
resolver = "2"

[workspace.package]
version = "0.2.0-beta.0"
edition = "2021"
authors = [
    "Anghelo Carvajal <angheloalf95@gmail.com>",
]
repository = "https://github.com/Decompollaborate/gnuv2_demangle"
license = "MIT OR Apache-2.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
