# SPDX-FileCopyrightText: © 2025 Decompollaborate
# SPDX-License-Identifier: MIT OR Apache-2.0

[workspace]
members = [
    "src/gnuv2_demangle",
    "src/g2dem",
    "src/g2dem-web",
]
resolver = "2"
default-members = [
    "src/gnuv2_demangle",
    "src/g2dem",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = [
    "Anghelo Carvajal <angheloalf95@gmail.com>",
]
repository = "https://github.com/Decompollaborate/gnuv2_demangle"
license = "MIT OR Apache-2.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
