# SPDX-FileCopyrightText: © 2025 Decompollaborate
# SPDX-License-Identifier: MIT

[package]
name = "g2dem"
version.workspace = true
edition.workspace = true
# rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
# description = ""
readme = "README.md"
# keywords = []
categories = ["command-line-utilities"]

[[bin]]
name = "g2dem"
path = "src/bin.rs"

[features]
default = []

[dependencies]
argp = "0.4.0"
gnuv2_demangle = { path = "../gnuv2_demangle", version = "0.1.0" }
