# SPDX-FileCopyrightText: © 2025 Decompollaborate
# SPDX-License-Identifier: MIT

[package]
name = "g2dem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
# description = ""
readme = "README.md"
# keywords = []
categories = ["command-line-utilities"]

# Use https://github.com/foresterre/cargo-msrv to check the MSRV
# ```
# cargo install cargo-msrv --locked --force
# cargo msrv find -- cargo check -p g2dem
# ```
rust-version = "1.81"

[[bin]]
name = "g2dem"
path = "src/bin.rs"

[features]
default = []

[dependencies]
argp = "0.4.0"
gnuv2_demangle = { path = "../gnuv2_demangle", version = "0.1.0" }
