# SPDX-FileCopyrightText: © 2025 Decompollaborate
# SPDX-License-Identifier: MIT

[package]
name = "g2dem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "`c++filt` clone cli tool for GNU V2 mangled symbols"
readme = "README.md"
keywords = [
    "demangle",
    "demangler",
    "GNU",
    "V2",
]
categories = [
    "command-line-utilities",
]
build = "build.rs"

# Use https://github.com/foresterre/cargo-msrv to check the MSRV
# ```
# cargo install cargo-msrv --locked --force
# cargo msrv find -- cargo check -p g2dem
# ```
rust-version = "1.81"

[[bin]]
name = "g2dem"
path = "src/bin.rs"

[features]
default = []

[dependencies]
gnuv2_demangle = { path = "../gnuv2_demangle", version = "0.2.0-beta.0", features = ["std"]}

argp = "0.4.0"

[build-dependencies]
built = { version = "0.8", features = ["git2", "chrono"] }
