# SPDX-FileCopyrightText: © 2025 Decompollaborate
# SPDX-License-Identifier: MIT

[package]
name = "gnuv2_demangle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
# description = ""
readme = "README.md"
# keywords = []
# categories = []

# Use https://github.com/foresterre/cargo-msrv to check the MSRV
# ```
# cargo install cargo-msrv --locked --force
# cargo msrv find -- cargo check -p gnuv2_demangle
# ```
rust-version = "1.81"

[lib]
path = "src/lib.rs"

[features]
default = []
std = []

[dependencies]

[dev-dependencies]
pretty_assertions = "1.4"
